@@ -3,11 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ua.com.kiloom</groupId>
     <artifactId>Simplescope</artifactId>
-    <version>3.0.0.32</version>
-    <url>http://kiloom.com.ua</url>
+    <version>3.0.0.35</version>
     <packaging>jar</packaging>
+    <url>http://kiloom.com.ua</url>
+    <description>USB scope control software</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.branchVersion>3.0.0</project.build.branchVersion>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
@@ -81,7 +83,7 @@
                 <artifactId>versions-maven-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
-                    <newVersion>3.0.0.${buildNumber}</newVersion>
+                    <newVersion>${project.build.branchVersion}.${buildNumber}</newVersion>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
                 <executions>
@@ -94,30 +96,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <fork>true</fork>
-                    <optimize>true</optimize>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                    <compilerArgs>
-                        <arg>-Djava.endorsed.dirs=${endorsed.dir}</arg>
-                        <arg>-Xlint:all,-options,-path</arg>
-                    </compilerArgs>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>com.sun.xml.bind</groupId>
-                            <artifactId>jaxb-jxc</artifactId>
-                            <version>2.2.11</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
@@ -128,6 +106,11 @@
                         <manifest>
                             <mainClass>ua.com.kiloom.simplescope.MainFrame</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <ModuleVersion>${project.build.branchVersion}.${buildNumber}</ModuleVersion>
+                            <ModuleName>${project.name}</ModuleName>
+                            <ModuleDescription>${project.description}</ModuleDescription>
+                        </manifestEntries>
                     </archive>
                 </configuration>
                 <executions>
